styles/media-query.css
/* media query per layout responsive */

/* .card-container{
    max-width: 450px;
} */

@media screen and (min-width:768px) {
    .container-main {
        padding: 30px;
    }

    .card-container {
        max-width: 700px;
        padding:20px 60px;
        flex-direction: row;
        justify-content: space-between;
        gap: 20px;

        .card {
            width: calc((100% / 2) - (20px * 1)/2);
            /* layout a 3 colonne (desktop) */
            flex-direction: column;
            align-items: center;
            padding: 15px;

            /*elementi card*/
            .photo-caption {
                padding-top: 8px;
            }

        }
    }
}


@media screen and (min-width:992px) {

    .container-main {
        padding: 50px;
    }

    .card-container {
        max-width: 800px;
        flex-direction: row;
        justify-content: space-between;
        gap: 15px;

        .card {
            width: calc((100% / 3) - (15px * 2)/3);
            /* layout a 3 colonne (desktop) */
            flex-direction: column;
            align-items: center;
            padding: 15px;

            /*elementi card*/
            .photo-caption {
                padding-top: 8px;
            }

        }
    }
}

